--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -2,7 +2,7 @@ name: .NET Core
 
 on:
   push:
-    branches: [ * ]
+    branches: [ feature/* ]
   pull_request:
     branches: [ release/*, master ]
 
