--- a/src/CodingChallengeLike.Api/CodingChallengeLike.Api.csproj
+++ b/src/CodingChallengeLike.Api/CodingChallengeLike.Api.csproj
@@ -8,10 +8,20 @@
     <PackageReference Include="AutoMapper" Version="10.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.7" />
+    <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.14.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.AzureKeyVault" Version="3.1.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.OpenIdConnectServer" Version="3.1.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.Publisher.ApplicationInsights" Version="3.1.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="3.1.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.System" Version="3.1.2" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI" Version="3.0.9" />
+    <PackageReference Include="NSwag.AspNetCore" Version="13.7.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\CodingChallengeLike.Domain\CodingChallengeLike.Domain.csproj" />
+    <ProjectReference Include="..\..\src\CodingChallengeLike.Infra\CodingChallengeLike.Infra.csproj" />
   </ItemGroup>
 
 </Project>
